Next

- Fixed incorrect patch counter on resolve (#2)